--- a/website/src/styles/public.styl
+++ b/website/src/styles/public.styl
@@ -1,6 +1,8 @@
 
 body
   color #222
+  min-width 1100px
+  padding-top 50px
 
 .iconfont
   fs 22px
@@ -15,19 +17,34 @@ body
   w 85%
   margin 0 auto
 
+.section-container
+  margin 0 auto;
+
+
 header#header
   h 80px
   pad 20px 0 0
   background-color #161616
   color #fff
-  .container
+  position fixed
+  left: 0
+  right: 0
+  top: 0
+  > .container
     rel()
     h 40px
+    z-index 21
   .logo
     abs left 0 top 0
+    z-index 21
   .right-icon
     abs right 0 top 0
+    z-index 21
     h 100%
+    i{
+      fs 18px
+      fw 700
+    }
   nav
     fs 18px
     ul
@@ -36,32 +53,46 @@ header#header
       fl()
       w 22%
       tc()
+      i{
+        color #ccc
+        vertical-align: bottom
+        display: inline-block
+      }
     li.last
       w 12%
+      i{
+        fs 26px
+      }
+
+.header-mask
+  position: fixed
+  left 0
+  top 0
+  right 0
+  bottom 0
+  z-index  20
+  background rgba(0,0,0,.6)
 
 
-
-.section-container
-  margin 0 auto;
-
-
-
-@media (min-width: 1024px){
-  .section-container{
-    w 85%
-  }
-}
-
-
-@media (min-width: 768px){
-  .section-container{
-    w 95%
-  }
-}
-
-
-@media (min-width: 568px){
-  .section-container{
-    w 85%
-  }
-}
+.header-mask__body
+  w 100%
+  background rgba(0,0,0,.4)
+  .container
+    display: flex
+    pt 97px
+    img
+      w 100%
+  .header-mask__body__browse
+    w 16%
+  .header-mask__body__group
+    w 83%
+    white-space:nowrap;
+    font-size:0;
+    .img
+      fl()
+      dib()
+      w 20%
+      pad 0 20px 20px 0
+    .main-img
+      w 40%
+      pad 0 20px 20px 0
