--- a/admin/src/views/main.less
+++ b/admin/src/views/main.less
@@ -1,3 +1,12 @@
+
+.my-icon{
+    font-family: "iconfont" !important;
+    font-size: 16px;
+    font-style: normal;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
 .lock-screen-back{
     border-radius: 50%;
     z-index: -1;
@@ -212,4 +221,9 @@
         height: 44px;
         width: auto;
     }
+}
+
+.table-page{
+    padding-top: 30px;
+    text-align: center;
 }
