详情商品放大镜

--- a/website/src/pages/detail/index.styl
+++ b/website/src/pages/detail/index.styl
@@ -22,6 +22,7 @@ body
     .main-image
       wh 500px 500px
       ov()
+      rel()
       @extends .flex-center;
       mar 0 auto
       mb 30px
