--- a/website/src/pages/feedback/index.styl
+++ b/website/src/pages/feedback/index.styl
@@ -15,20 +15,22 @@ body
   pb 200px
   background #fff
   h2
-    fs 22px
+    fs 30px
     mb 40px
     tc()
 
 .feedback
-  width: 800px;
+  width: 900px;
   mar 0 auto
   display: flex;
   flex-wrap: wrap;
+  pl 76px
   .group
     w 50%
     pr 20px
     display: flex;
-    mb 15px
+    mb 25px
+    rel()
     .label
       w 60px
       lh 36px
@@ -38,21 +40,41 @@ body
       flex 1
       input.input 
         border: 1px solid #dedfe0;
-        wh 200px 36px
+        wh 250px 36px
         borr 4px
         pl 10px
       textarea
         border: 1px solid #dedfe0;
-        wh 400px 100px
+        wh 311px 100px
         borr 4px
         pad 5px
       label
         mr 10px
+    .error
+      abs left 60px top 38px
+      color $red
+      fs 12px
+    .error--big
+      left 0
+      top 136px
   .group--full
     w 100%
     display: block;
+  .group--column
+    flex-direction: column;
+  .group--error
+    .content
+      input.input, textarea
+        border 1px solid $red
+  
 .group-btn
   pt 50px
   tc()
   > a
     mar 0 20px
+
+.group-error
+  wh 100% 30px
+  tc()
+  color $red
+  fs 16px
