--- a/website/src/pages/about/index.styl
+++ b/website/src/pages/about/index.styl
@@ -13,12 +13,9 @@ body
   mar 100px auto
   pad 50px
   background #fff
-  h2
-    fs 30px
-    mb 20px
   
 .about-content
   w 750px
   mar 0 auto
-  pad 50px 0 100px
+  pad 0 0 100px
   lh 2
