--- a/admin/src/template/index.ejs
+++ b/admin/src/template/index.ejs
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
     <link rel="stylesheet" href="<%= htmlWebpackPlugin.files.css[0] %>">
     <link rel="stylesheet" name="theme" href="">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1086736_zg7eeo34ng.css">
 </head>
 
 <body>
