--- a/admin/src/styles/beats.less
+++ b/admin/src/styles/beats.less
@@ -90,3 +90,92 @@
     }
   }
 }
+.upload-img{
+  width: 58px;
+  height: 58px;
+  display: inline-block;
+  vertical-align: middle;
+  img{
+    max-width: 100%;
+    max-height: 100%;
+  }
+}
+.my-upload{
+  width: 58px;
+  height: 58px;
+  display: inline-block;
+  background: #fff;
+  border: 1px dashed #dcdee2;
+  border-radius: 4px;
+  margin-right: 10px;
+  .ivu-upload-select{
+    display: block;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+  }
+}
+
+
+.banner-container{
+  img{
+    max-width: 100%;
+  }
+  width: 100%;
+  .item{
+    width: 350px;
+    height: 230px;
+    float: left;
+    background: #fff;
+    border-radius: 4px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    position: relative;
+    .img{
+      width: 100%;
+      height: 180px;
+      h3{
+        padding: 20px 20px;
+      }
+      .my-upload{
+        vertical-align: middle;
+      }
+      .upload-center{
+        margin: 0 auto;
+        display: block;
+        position: relative;
+        top: 10px;
+        text-align: center;
+      }
+    }
+    .info{
+      padding: 0 20px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+    .close{
+      position: absolute;
+      right: 10px;
+      bottom: 10px;
+      cursor: pointer;
+      padding: 4px 10px;
+    }
+  }
+}
+
+.ivu-icon.ivu-icon-a.iconfont.iconbanner{
+  margin-top: 5px;
+}
+
+.span-color{
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  vertical-align: middle;
+  border-radius: 50%;
+  margin-left: 5px;
+}
