--- a/admin/src/styles/beats.less
+++ b/admin/src/styles/beats.less
@@ -138,7 +138,11 @@
       width: 100%;
       height: 180px;
       h3{
-        padding: 20px 20px;
+        padding: 20px 20px 5px;
+      }
+      p{
+        color: #8c8c8c;
+        padding-left: 20px;
       }
       .my-upload{
         vertical-align: middle;
