--- a/admin/src/styles/beats.less
+++ b/admin/src/styles/beats.less
@@ -117,6 +117,15 @@
     align-content: center;
     align-items: center;
   }
+
+  &.my-upload-mini{
+    height: 30px;
+    vertical-align: middle;
+    .ivu-icon{
+      position: relative;
+      top: 3px;
+    }
+  }
 }
 
 
@@ -182,4 +191,22 @@
   vertical-align: middle;
   border-radius: 50%;
   margin-left: 5px;
+}
+
+
+.add-spec{
+  width: 58px;
+  height: 58px;
+  display: inline-block;
+  background: #fff;
+  border: 1px dashed #dcdee2;
+  display: flex;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  > .iconfont{
+    transform: rotate(135deg);
+    display: inline-block;
+  }
 }
