--- a/website/src/@shared/styles/public.styl
+++ b/website/src/@shared/styles/public.styl
@@ -307,19 +307,19 @@ header#header
           tc()
           db()
           mt 10px
-      &:last-child
-        .image__content
-          borr 50%
-          ov()
-          > span
-            abs left 0 top 0
-            wh 100% 100%
-            background rgba(0,0,0,.5)
-            fs 14px
-            color #fff
-            borr 50%
-            mar 0
-            @extends .flex-center
+      // &:last-child
+      //   .image__content
+      //     borr 50%
+      //     ov()
+      //     > span
+      //       abs left 0 top 0
+      //       wh 100% 100%
+      //       background rgba(0,0,0,.5)
+      //       fs 14px
+      //       color #fff
+      //       borr 50%
+      //       mar 0
+      //       @extends .flex-center
     .main-img
       w 40%
       pad 0 20px 20px 0
@@ -333,6 +333,7 @@ header#header
         font()
         pt 20px
         tc()
+      
 
 .header-search
   position: fixed;
