加入账号身份

--- a/website/src/@shared/styles/public.styl
+++ b/website/src/@shared/styles/public.styl
@@ -618,6 +618,11 @@ figure
     .content
       input.input, textarea
         border 1px solid $red
+  select
+    wh 250px 36px
+    border 1px solid #dedfe0
+    background #fff
+    font-size 14px
   
 .group-btn
   pt 50px
