首页完事、登录权限、留言提交产品

--- a/admin/src/styles/beats.less
+++ b/admin/src/styles/beats.less
@@ -180,8 +180,8 @@
   }
 }
 
-.ivu-icon.ivu-icon-a.iconfont.iconbanner{
-  margin-top: 5px;
+.iconbanner{
+  margin-top: 5px!important;
 }
 
 .span-color{
