商品详情storage记录当前语言

--- a/website/src/@shared/styles/public.styl
+++ b/website/src/@shared/styles/public.styl
@@ -626,6 +626,7 @@ figure
   .f-product-list
     w 220px
     abs left 0 top 0
+    z-index 3
   .f-product-list__item
     wh 50px 50px
     border 1px solid #eceaea
@@ -738,3 +739,7 @@ figure
     fs 18px
   #main-content h3, .content-h2-title
     fs 28px
+  h2.title
+    fs 36px
+  #main-content nav
+    fs 20px
