--- a/website/src/@shared/styles/public.styl
+++ b/website/src/@shared/styles/public.styl
@@ -729,6 +729,9 @@ figure
     align-self: center
 
 
+#main-content
+  borr 4px
+  box-shadow:  0 0 7px 1px rgba(0,0,0,0.03)
 
 /* language的css */
 .language-english
