加入移动端项目

--- a/website/src/@shared/stylus/mixins/mixins.styl
+++ b/website/src/@shared/stylus/mixins/mixins.styl
@@ -137,6 +137,15 @@ fr()
 notwrap()
 	white-space nowrap
 
+/* 
+	文字溢出小数点
+ */
+text-ov()
+	white-space nowrap
+	overflow hidden
+	text-overflow ellipsis
+
+
 /*
   强制换行
 */
